[package]
name = "turbofish"
version = "0.0.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2018"
description = "A fast lightweight rust framework built on top of hyper (wip)."
repository = "https://github.com/ibraheemdev/turbofish/"
readme = "README.md"

[dependencies]
hyper = "0.13.9"
regex = "1.4.2"
either = "1.6.1"
percent-encoding = "2.1.0"
