[package]
name = "turbofish"
version = "0.0.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2018"
description = "A fast lightweight rust framework built on top of hyper (wip)."
repository = "https://github.com/ibraheemdev/turbofish/"
readme = "README.md"

[workspace]
members = [
    ".",
    "turbo-orm"
]

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "server"] }
async-trait = "0.1"
futures = "0.3"
http = "0.2"
bytes = "1.0"
cookie = "0.14"
